fixed icon path

--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
                     <li><img src="images/FB.png" alt="fb">Facebook:
                         <a href="https://www.facebook.com/litayong.kantola " target=_blank>www.facebook.com/litayong.kantola </a>
                     </li><br>
-                    <li><img src="images/IG.png'" alt="ig">Instagram:
+                    <li><img src="images/IG.png" alt="ig">Instagram:
                         <a href="https://www.instagram.com/javfong/ " target=_blank>www.instagram.com/javfong</a>
                     </li><br>
                     <li><img src="images/email.png" alt="email">Email:
                         <a href="mailto:kantola143@gmail.com " target=_blank target=_blank>kantola143@gmail.com </a>
                     </li><br>
-                    <li><img src="/images/linkedIn.png" alt="email">LinkedIn:
+                    <li><img src="images/linkedIn.png" alt="email">LinkedIn:
                         <a href="https://www.linkedin.com/in/tola-kan-9b81b8282/ " target=_blank target=_blank>www.linkedin.com/in/tola-kan-9b81b8282/ </a>
                     </li><br>
                     <li><img src="images/github.png" alt="email">Github:
