--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <a class="link" href="#skills"> <i class="fas fa-user-check"></i>Skills</a>
                 </li>
                 <li class="list">
-                    <a class="link" href="#services"> <i class="fas fa-wrench"></i>Service</a>
+                    <a class="link" href="#works"> <i class="fas work"></i>Experience</a>
                 </li>
                 <li class="list">
-                    <a class="link" href="#contact"> <i class="fas fa-phone"></i>Contact</a>
+                    <a class="link" href="#certificate"> <i class="fas fa-user-check"></i>Academic</a>
                 </li>
                 <li class="list">
                     <a class="link" href="#"> <i class="fas fa-moon" id="icon"></i></a>
@@ -62,7 +62,7 @@
         </div>
         <div class="social-link">
             <a href="https://www.facebook.com/litayong.kantola " target=_blank title="https://www.facebook.com/litayong.kantola"><img src="images/FB.png" alt="fb"></a>
-            <a href="https://www.instagram.com/javfong/" target=_blank title="https://www.instagram.com/tola_eart_616"><img src="images/IG.png" alt="ig"></a>
+            <a href="https://www.instagram.com/tola_eart_616" target=_blank title="https://www.instagram.com/tola_eart_616"><img src="images/IG.png" alt="ig"></a>
             <a href="mailto:kantola143@gmail.com " target=_blank title="kantola143@gmail.com"><img src="images/email.png" alt="email"></a>
             <a href="https://www.linkedin.com/in/tola-kan-9b81b8282/ " target=_blank title="linkedin.com/in/tola-kan-9b81b8282/"><img src="images/linkedIn.png" alt="linkedIn"></a>
             <a href="https://github.com/Tola143 " target=_blank title="https://github.com/Tola143"><img src="images/github.png" alt="github"></a>
@@ -282,9 +282,10 @@
                 </div>
                 <div class="text">
                     <div class="topic">Leadership | April 2023 - Precent</div>
-                    <p>This project, funded by KMUTNB for Sustainable Living Solutions, utilizes Flutter to develop a mobile application supporting EV infrastructure, local product accessibility, and digital connectivity. </p><br>
-                    <li>Role: PROJECT MANAGER AND BACKEND</li>
-                    <li>Use: Flutter</li>
+                    <p>I consistently demonstrate exceptional leadership, responsibility, and dedication in enhancing the student experience on campus. Through these experiences, my interpersonal skills have improved dramatically. </p><br>
+                    <li>Position: 3rd vice president of Student Council</li>
+                    <li>Responsibility: One of the product owners of <a href="https://i-voting.op.kmutnb.ac.th/site/login"> KMUTNB i-voting system</a> </li>
+                    
                     <br>
                     <a href="https://www.facebook.com/share/sGpKhowf4LPRVQPe/?mibextid=cR73hX" target=_blank title="https://www.facebook.com/share/sGpKhowf4LPRVQPe/?mibextid=cR73hX"><img>https://www.facebook.com/share</a>
 
@@ -317,9 +318,9 @@
                 </div>
                 <div class="text">
                     <div class="topic">Botnoi voice project | July-Auguest 2023</div>
-                    <p>This project, funded by KMUTNB for Sustainable Living Solutions, utilizes Flutter to develop a mobile application supporting EV infrastructure, local product accessibility, and digital connectivity. </p><br>
-                    <li>Role: PROJECT MANAGER AND BACKEND</li>
-                    <li>Use: Flutter</li>
+                    <p>received sponsorship to contribute to the Khmer language recording for the BOTNOI voice project. This collaboration falls under the Memorandum Of Understanding (MOU) between King Mongkut's University of Technology North Bangkok and BOTNOI Company Limited. </p><br>
+                    <li>Role: Voice recording</li>
+                    <li>Use: Botnoi Ai voice website</li>
                     <br>
                     <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02Cvt9ak62QRwRU7MNjoGd4yApQManYBhcm4iUSWjfsL54UwGhsnhbKjNb5y4WtDHrl" target=_blank title="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02Cvt9ak62QRwRU7MNjoGd4yApQManYBhcm4iUSWjfsL54UwGhsnhbKjNb5y4WtDHrl"><img>https://www.facebook.com/itkmutnb.bangkok/posts</a>
 
@@ -329,8 +330,85 @@
     </section>
 
     <!-- Licenses & certifications -->
-    <section>
+    <section class="certificate" id="certificate">
         <div class="title"><span>Licenses & certifications</span></div>
+        <div class="certificate-container">
+            <div class="certificate-item">
+                <a href="https://courses.nvidia.com/certificates/c42e6009fc814157839e0015a980951d/" target="_blank">
+                    <img src="images/certificates/nvidia.png" alt="Fundamentals of Deep Learning">
+                    <div class="overlay">Fundamentals of Deep Learning</div>
+                </a>
+                <h4>Fundamentals of Deep Learning</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="https://coursera.org/share/460f54c71a53a18673b7043d5e1ea169" target="_blank">
+                    <img src="images/certificates/data_analytics.png" alt="Data Analytics">
+                    <div class="overlay">Data Analytics</div>
+
+                </a>
+                <h4>Google Data Analytics</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="https://coursera.org/share/a794bd4bea284e3ecf855cf4376454af" target="_blank">
+                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Digital Marketing & E-commerce">
+                    <div class="overlay">Digital Marketing & E-commerce</div>
+                </a>
+                <h4>Google Digital Marketing & E-commerce</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="https://coursera.org/share/52648c2cc1f99b727306a01e6ad8e2a4" target="_blank">
+                    <img src="images/certificates/agile.png" alt="agile project management">
+                    <div class="overlay">Agile project management</div>
+                </a>
+                <h4>Agile project management</h4><br>
+            </div>
+
+            <div class="certificate-item">
+                <a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIzMzM4IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvdGh1bWJfNDg4MzY4M18xNzA4MTg1ODg3LnBuZyIsInVzZXJuYW1lIjoiVG9sYSBLYW4ifQ%3D%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F6130%2FWhat-is-Software-Development-%253F%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1162628487927067471&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVj8h3yjMpqnJO90gCAGhTKtolAAAA"
+                    target="_blank">
+                    <img src="images/certificates/SDLC.png" alt="Fundamentals of Software Development">
+                    <div class="overlay">Fundamentals of Software Development</div>
+                </a>
+                <h4>Fundamentals of Software Development</h4><br>
+            </div>
+
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/certificates/thai_certificate.jpg" alt="Thai language course">
+                    <div class="overlay">Thai course</div>
+                </a>
+                <h4>Completed Thai language course</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/certificates/3d_modeling.jpg" alt="">
+                    <div class="overlay">3D Modeling</div>
+                </a>
+                <h4>3D Modeling</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/certificates/kmutnb_project_day.jpg" alt="">
+                    <div class="overlay">KMUTNB Project Day</div>
+                </a>
+                <h4>Participated in KMUTNB Project Day</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="https://via.placeholder.com/600x480" alt="">
+                    <div class="overlay">KMUTNB Student council</div>
+                </a>
+                <h4>3rd vice president of KMUTNB Student council</h4><br>
+            </div>
+
+            <!-- Add more certificate items here -->
+        </div>
+
+    </section>
+
+    <!-- Academic achievments -->
+    <section class="certificate" id="certificate">
+        <div class="title"><span>Academic activities</span></div>
         <div class="certificate-container">
             <div class="certificate-item">
                 <a href="https://courses.nvidia.com/certificates/c42e6009fc814157839e0015a980951d/" target="_blank">
@@ -415,7 +493,7 @@
                         <a href="https://www.facebook.com/litayong.kantola " target=_blank>www.facebook.com/litayong.kantola </a>
                     </li><br>
                     <li><img src="images/IG.png" alt="ig">Instagram:
-                        <a href="https://www.instagram.com/javfong/ " target=_blank>www.instagram.com/javfong</a>
+                        <a href="https://www.instagram.com/tola_eart_616 " target=_blank>www.instagram.com/tola_eart_616</a>
                     </li><br>
                     <li><img src="images/email.png" alt="email">Email:
                         <a href="mailto:kantola143@gmail.com " target=_blank target=_blank>kantola143@gmail.com </a>
