--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 </div>
                 <div class="text">
                     <div class="topic">Botnoi voice project | July-Auguest 2023</div>
-                    <p>received sponsorship to contribute to the Khmer language recording for the BOTNOI voice project. This collaboration falls under the Memorandum Of Understanding (MOU) between King Mongkut's University of Technology North Bangkok and BOTNOI Company Limited. </p><br>
+                    <p>I have received sponsorship to contribute to the Khmer language recording for the BOTNOI voice project. This collaboration falls under the Memorandum Of Understanding (MOU) between King Mongkut's University of Technology North Bangkok and BOTNOI Company Limited. </p><br>
                     <li>Role: Voice recording</li>
                     <li>Use: Botnoi Ai voice website</li>
                     <br>
