--- a/index.html
+++ b/index.html
@@ -411,74 +411,50 @@
         <div class="title"><span>Academic activities</span></div>
         <div class="certificate-container">
             <div class="certificate-item">
-                <a href="https://courses.nvidia.com/certificates/c42e6009fc814157839e0015a980951d/" target="_blank">
-                    <img src="images/certificates/nvidia.png" alt="Fundamentals of Deep Learning">
-                    <div class="overlay">Fundamentals of Deep Learning</div>
+                <a href="https://www.kmutnb.ac.th/news/university-news/%E0%B8%84%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%AA%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%99%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%99%E0%B8%A7%E0%B8%95%E0%B8%81%E0%B8%A3%E0%B8%A3%E0%B8%A1%E0%B8%94%E0%B8%88%E0%B8%97%E0%B8%A5-%E0%B8%A1%E0%B8%88%E0%B8%9E-%E0%B8%88%E0%B8%94%E0%B9%82%E0%B8%84%E0%B8%A3.aspx" target="_blank">
+                    <img src="images/certificates/nvidia.png" alt="Field trip to Klet Kaeo">
+                    <div class="overlay">Field trip to Klet Kaeo</div>
                 </a>
-                <h4>Fundamentals of Deep Learning</h4><br>
+                <h4>Field trip to Klet Kaeo</h4><br>
             </div>
             <div class="certificate-item">
-                <a href="https://coursera.org/share/460f54c71a53a18673b7043d5e1ea169" target="_blank">
-                    <img src="images/certificates/data_analytics.png" alt="Data Analytics">
-                    <div class="overlay">Data Analytics</div>
+                <a href="https://www.facebook.com/Fanpage.ITD.KMUTNB/posts/pfbid02TyFdReukDpfkCKTHbAPvg4gjs1xxvBqcgQ2L8UgiJFJ4Jqzu5asnAf2N7f75qWdcl" target="_blank">
+                    <img src="images/certificates/data_analytics.png" alt="I-BIT Orientation Day 2023">
+                    <div class="overlay">I-BIT Orientation Day 2023</div>
 
                 </a>
-                <h4>Google Data Analytics</h4><br>
+                <h4>I-BIT Orientation Day 2023</h4><br>
             </div>
             <div class="certificate-item">
-                <a href="https://coursera.org/share/a794bd4bea284e3ecf855cf4376454af" target="_blank">
-                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Digital Marketing & E-commerce">
-                    <div class="overlay">Digital Marketing & E-commerce</div>
+                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
+                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
-                <h4>Google Digital Marketing & E-commerce</h4><br>
-            </div>
+                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+            </div>  
+            
             <div class="certificate-item">
-                <a href="https://coursera.org/share/52648c2cc1f99b727306a01e6ad8e2a4" target="_blank">
-                    <img src="images/certificates/agile.png" alt="agile project management">
-                    <div class="overlay">Agile project management</div>
+                <a href="https://www.facebook.com/litayong.kantola/posts/pfbid0bhzrqe1rKgNWs6FrvMFybhZN34k33h56t5GN18vNtTxW8XhnQNpn1wP6snwrwL2Wl" target="_blank">
+                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
-                <h4>Agile project management</h4><br>
-            </div>
+                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+            </div>  
+            <div class="certificate-item">
+                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
+                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <div class="overlay">Collaborative Academic Exchange</div>
+                </a>
+                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+            </div>  
+            <div class="certificate-item">
+                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
+                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <div class="overlay">Collaborative Academic Exchange</div>
+                </a>
+                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+            </div>  
 
-            <div class="certificate-item">
-                <a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIzMzM4IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvdGh1bWJfNDg4MzY4M18xNzA4MTg1ODg3LnBuZyIsInVzZXJuYW1lIjoiVG9sYSBLYW4ifQ%3D%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F6130%2FWhat-is-Software-Development-%253F%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1162628487927067471&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVj8h3yjMpqnJO90gCAGhTKtolAAAA"
-                    target="_blank">
-                    <img src="images/certificates/SDLC.png" alt="Fundamentals of Software Development">
-                    <div class="overlay">Fundamentals of Software Development</div>
-                </a>
-                <h4>Fundamentals of Software Development</h4><br>
-            </div>
-
-            <div class="certificate-item">
-                <a href="" target="_blank">
-                    <img src="images/certificates/thai_certificate.jpg" alt="Thai language course">
-                    <div class="overlay">Thai course</div>
-                </a>
-                <h4>Completed Thai language course</h4><br>
-            </div>
-            <div class="certificate-item">
-                <a href="" target="_blank">
-                    <img src="images/certificates/3d_modeling.jpg" alt="">
-                    <div class="overlay">3D Modeling</div>
-                </a>
-                <h4>3D Modeling</h4><br>
-            </div>
-            <div class="certificate-item">
-                <a href="" target="_blank">
-                    <img src="images/certificates/kmutnb_project_day.jpg" alt="">
-                    <div class="overlay">KMUTNB Project Day</div>
-                </a>
-                <h4>Participated in KMUTNB Project Day</h4><br>
-            </div>
-            <div class="certificate-item">
-                <a href="" target="_blank">
-                    <img src="https://via.placeholder.com/600x480" alt="">
-                    <div class="overlay">KMUTNB Student council</div>
-                </a>
-                <h4>3rd vice president of KMUTNB Student council</h4><br>
-            </div>
-
-            <!-- Add more certificate items here -->
         </div>
 
     </section>
