--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="icon">
                         <i class="fas fa-tablet-alt"></i>
                     </div>
-                    <div class="topic">DevOpes</div>
+                    <div class="topic">DevOps</div>
                     <p>Docker, Ansible, K8s</p>
                 </div>
                 <div class="box">
@@ -285,7 +285,7 @@
                     <p>I consistently demonstrate exceptional leadership, responsibility, and dedication in enhancing the student experience on campus. Through these experiences, my interpersonal skills have improved dramatically. </p><br>
                     <li>Position: 3rd vice president of Student Council</li>
                     <li>Responsibility: One of the product owners of <a href="https://i-voting.op.kmutnb.ac.th/site/login"> KMUTNB i-voting system</a> </li>
-                    
+
                     <br>
                     <a href="https://www.facebook.com/share/sGpKhowf4LPRVQPe/?mibextid=cR73hX" target=_blank title="https://www.facebook.com/share/sGpKhowf4LPRVQPe/?mibextid=cR73hX"><img>https://www.facebook.com/share</a>
 
@@ -318,7 +318,8 @@
                 </div>
                 <div class="text">
                     <div class="topic">Botnoi voice project | July-Auguest 2023</div>
-                    <p>I have received sponsorship to contribute to the Khmer language recording for the BOTNOI voice project. This collaboration falls under the Memorandum Of Understanding (MOU) between King Mongkut's University of Technology North Bangkok and BOTNOI Company Limited. </p><br>
+                    <p>I have received sponsorship to contribute to the Khmer language recording for the BOTNOI voice project. This collaboration falls under the Memorandum Of Understanding (MOU) between King Mongkut's University of Technology North Bangkok
+                        and BOTNOI Company Limited. </p><br>
                     <li>Role: Voice recording</li>
                     <li>Use: Botnoi Ai voice website</li>
                     <br>
@@ -406,12 +407,13 @@
 
     </section>
 
-    <!-- Academic achievments -->
+    <!-- Academic achievements -->
     <section class="certificate" id="certificate">
         <div class="title"><span>Academic activities</span></div>
         <div class="certificate-container">
             <div class="certificate-item">
-                <a href="https://www.kmutnb.ac.th/news/university-news/%E0%B8%84%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%AA%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%99%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%99%E0%B8%A7%E0%B8%95%E0%B8%81%E0%B8%A3%E0%B8%A3%E0%B8%A1%E0%B8%94%E0%B8%88%E0%B8%97%E0%B8%A5-%E0%B8%A1%E0%B8%88%E0%B8%9E-%E0%B8%88%E0%B8%94%E0%B9%82%E0%B8%84%E0%B8%A3.aspx" target="_blank">
+                <a href="https://www.kmutnb.ac.th/news/university-news/%E0%B8%84%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%AA%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%99%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%99%E0%B8%A7%E0%B8%95%E0%B8%81%E0%B8%A3%E0%B8%A3%E0%B8%A1%E0%B8%94%E0%B8%88%E0%B8%97%E0%B8%A5-%E0%B8%A1%E0%B8%88%E0%B8%9E-%E0%B8%88%E0%B8%94%E0%B9%82%E0%B8%84%E0%B8%A3.aspx"
+                    target="_blank">
                     <img src="images/certificates/nvidia.png" alt="Field trip to Klet Kaeo">
                     <div class="overlay">Field trip to Klet Kaeo</div>
                 </a>
@@ -419,7 +421,7 @@
             </div>
             <div class="certificate-item">
                 <a href="https://www.facebook.com/Fanpage.ITD.KMUTNB/posts/pfbid02TyFdReukDpfkCKTHbAPvg4gjs1xxvBqcgQ2L8UgiJFJ4Jqzu5asnAf2N7f75qWdcl" target="_blank">
-                    <img src="images/certificates/data_analytics.png" alt="I-BIT Orientation Day 2023">
+                    <img src="images/certificates/" alt="I-BIT Orientation Day 2023">
                     <div class="overlay">I-BIT Orientation Day 2023</div>
 
                 </a>
@@ -427,33 +429,33 @@
             </div>
             <div class="certificate-item">
                 <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
                     <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
                 <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
-            </div>  
-            
+            </div>
+
             <div class="certificate-item">
                 <a href="https://www.facebook.com/litayong.kantola/posts/pfbid0bhzrqe1rKgNWs6FrvMFybhZN34k33h56t5GN18vNtTxW8XhnQNpn1wP6snwrwL2Wl" target="_blank">
-                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
                     <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
                 <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
-            </div>  
+            </div>
             <div class="certificate-item">
                 <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
                     <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
                 <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
-            </div>  
+            </div>
             <div class="certificate-item">
                 <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/digital_marketing_&_e-commerce.png" alt="Collaborative Academic Exchange">
+                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
                     <div class="overlay">Collaborative Academic Exchange</div>
                 </a>
                 <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
-            </div>  
+            </div>
 
         </div>
 
