--- a/index.html
+++ b/index.html
@@ -411,50 +411,127 @@
     <section class="certificate" id="certificate">
         <div class="title"><span>Academic activities</span></div>
         <div class="certificate-container">
+            <!-- Section 1 -->
             <div class="certificate-item">
                 <a href="https://www.kmutnb.ac.th/news/university-news/%E0%B8%84%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%AA%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%99%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%99%E0%B8%A7%E0%B8%95%E0%B8%81%E0%B8%A3%E0%B8%A3%E0%B8%A1%E0%B8%94%E0%B8%88%E0%B8%97%E0%B8%A5-%E0%B8%A1%E0%B8%88%E0%B8%9E-%E0%B8%88%E0%B8%94%E0%B9%82%E0%B8%84%E0%B8%A3.aspx"
                     target="_blank">
-                    <img src="images/certificates/nvidia.png" alt="Field trip to Klet Kaeo">
+                    <img src="images/acadimic_activities/field_trip.jpg" alt="Field trip to Klet Kaeo">
                     <div class="overlay">Field trip to Klet Kaeo</div>
                 </a>
-                <h4>Field trip to Klet Kaeo</h4><br>
+                <h4>On 25th February 2023 <br>Field trip to Klet Kaeo</h4><br>
             </div>
             <div class="certificate-item">
                 <a href="https://www.facebook.com/Fanpage.ITD.KMUTNB/posts/pfbid02TyFdReukDpfkCKTHbAPvg4gjs1xxvBqcgQ2L8UgiJFJ4Jqzu5asnAf2N7f75qWdcl" target="_blank">
-                    <img src="images/certificates/" alt="I-BIT Orientation Day 2023">
+                    <img src="images/acadimic_activities/orientation_day.jpg" alt="I-BIT Orientation Day 2023">
                     <div class="overlay">I-BIT Orientation Day 2023</div>
 
                 </a>
-                <h4>I-BIT Orientation Day 2023</h4><br>
+                <h4>On 1st July, 2023<br>I-BIT Orientation Day 2023</h4><br>
             </div>
             <div class="certificate-item">
-                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
-                    <div class="overlay">Collaborative Academic Exchange</div>
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/collaborate.jpg" alt="Resprentative of ITD faculty">
+                    <div class="overlay">Resprentative of ITD faculty</div>
                 </a>
-                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+                <h4>On 10th July, 2023<br>On Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
             </div>
 
+            <!-- Section 2 -->
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/teacher_day.jpg" alt="งานไหว้ครู at KMUTNB">
+                    <div class="overlay">งานไหว้ครู at KMUTNB</div>
+                </a>
+                <h4>On 20th July, 2023<br>งานไหว้ครู at KMUTNB</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/งานถวายสัตย์.jpg" alt="งานถวายสัตย์ at KMUTNB">
+                    <div class="overlay">งานถวายสัตย์ at KMUTNB</div>
+                </a>
+                <h4>On 21th July, 2023<br>งานถวายสัตย์ at KMUTNB</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/rayoung.jpg" alt="งานถวายสัตย์ at KMUTNB Rayon campus">
+                    <div class="overlay">งานถวายสัตย์ at KMUTNB Rayon campus</div>
+                </a>
+                <h4>On 27th July, 2023<br>งานถวายสัตย์ at KMUTNB</h4><br>
+            </div>
+
+            <!-- Section 3 -->
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/3k.jpg" alt="KMUTNB's Student Council Leadership Developmen">
+                    <div class="overlay">KMUTNB's Student Council Leadership Developmen</div>
+                </a>
+                <h4>On 28th to 30th July, 2023<br>KMUTNB's Student Council Leadership Development Project for 3 University Campuses</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/prachinburi.jpg" alt="งานถวายสัตย์ at KMUTNB Prachinburi campus">
+                    <div class="overlay">งานถวายสัตย์ at KMUTNB Prachinburi campus</div>
+                </a>
+                <h4>On 5th August, 2023<br>งานถวายสัตย์ at KMUTNB Prachinburi campus</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/botnoi.jpg" alt="Build chatbot">
+                    <div class="overlay">Built a chatbot</div>
+                </a>
+                <h4>On 9th August, 2023<br>Built a chatbot with BOTNOI AI</h4><br>
+            </div>
+
+             <!-- Section 4 -->
+             <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/casting.jpg" alt="Casting in KMUTNB Public Relation project">
+                    <div class="overlay">Casting in KMUTNB Public Relation project</div>
+                </a>
+                <h4>On 11th August, 2023<br>Casting in KMUTNB Public Relation project</h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/IC_Exchange.jpg" alt="International Cultural Exchange and English Day
+                    ">
+                    <div class="overlay">International Cultural Exchange and English Day
+                    </div>
+                </a>
+                <h4>On 17-19th August, 2023<br>International Cultural Exchange and English Day
+                </h4><br>
+            </div>
+            <div class="certificate-item">
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/mou.jpg" alt="Signing Ceremony of the MOU and KMUTNB">
+                    <div class="overlay">Signing Ceremony of the MOU and KMUTNB</div>
+                </a>
+                <h4>On 5th Septemper, 2023<br>Signing Ceremony of the MOU and KMUTNB</h4><br>
+            </div>
+           
+            
+            <!-- Section 4 -->
             <div class="certificate-item">
                 <a href="https://www.facebook.com/litayong.kantola/posts/pfbid0bhzrqe1rKgNWs6FrvMFybhZN34k33h56t5GN18vNtTxW8XhnQNpn1wP6snwrwL2Wl" target="_blank">
-                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
-                    <div class="overlay">Collaborative Academic Exchange</div>
+                    <img src="images/acadimic_activities/parliament.jpg" alt="Visiting the parliament of Thailand">
+                    <div class="overlay">Visiting the parliament of Thailand</div>
                 </a>
-                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+                <h4>On 08 September 2023 <br> Visiting the parliament of Thailand</h4><br>
             </div>
             <div class="certificate-item">
-                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
-                    <div class="overlay">Collaborative Academic Exchange</div>
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/interview.jpg" alt="Give an interview with KMUTNB’s journalist">
+                    <div class="overlay">Give an interview with KMUTNB’s journalist</div>
                 </a>
-                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+                <h4>On 12th September 2023 <br>Give an interview with KMUTNB’s journalist</h4><br>
             </div>
             <div class="certificate-item">
-                <a href="https://www.facebook.com/itkmutnb.bangkok/posts/pfbid02T9kEUFxgYKpE9F6Nid2PDhR8ZVqudKva32nxF9vKrs76CctMq9FaCD7Qt7pY69U4l" target="_blank">
-                    <img src="images/certificates/" alt="Collaborative Academic Exchange">
-                    <div class="overlay">Collaborative Academic Exchange</div>
+                <a href="" target="_blank">
+                    <img src="images/acadimic_activities/welcoming_visitors.jpg" alt="Welcoming Austrian Embassy staffs">
+                    <div class="overlay">Welcoming Austrian Embassy staffs</div>
                 </a>
-                <h4>Collaborative Academic Exchange Meeting Between KMUTNB and VKU‐ Danang University</h4><br>
+                <h4> On 18th October, 2023 <br>Strengthening Global Ties
+                    Together with the esteemed Austrian Embassy staffs
+                    </h4><br>
             </div>
 
         </div>
